Revision history for Perl extension UPnP.

2009-07-27 Satoshi Konno <skonno@cybergarage.org>
	* v1.4.2
	* Added Net::UPnP::SetDebug().
	* Fixed Net:UPnP::ControlPoint::search() not to use uninitialize value on the debug mode.
	* Added two examples, upnpchk.pl and upnpavchk.pl, to check UPnP and UPnP/AV devices.

2009-06-10 Tim Engler <engler at gmail.com>
	* Fixed Net:UPnP::Device::getdescription() to use a non-greedy match.

2009-02-13 miz <miz999 at gmail.com>
	* Fixed Net:UPnP::HTTP::post() to convert the line feed to CRLF.

2008-10-15 Satoshi Konno <skonno@cybergarage.org>
	* v1.4.1
	* Fixed a documentatin of Net::UPnP::AV::MediaRenderer.

2008-10-13 Satoshi Konno <skonno@cybergarage.org>
	* v1.4
	* Added Net::UPnP::AV::MediaRenderer.
	* Skipped v1.3 because I missed to upload the package. 
	
2008-05-13 Satoshi Konno <skonno@cybergarage.org>
	* v1.2.4

2008-05-07 Christian KrauBe
	* Added Net::UPnP::GW::gettotalbytessent().

2008-05-01 Satoshi Konno <skonno@cybergarage.org>
	* Added Net::UPnP::GW::gettotalbytesrecieved().
	* Added a sample to use Net::UPnP::GW::gettotalbytesrecieved() into exsample/upnpgwdump.pl.

2006-03-13 Satoshi Konno <skonno@cybergarage.org>
	* v1.2.1
	* Added QueryResponse.pm to the package.

2006-03-02 Satoshi Konno <skonno@cybergarage.org>
        * v1.2
        * Renamed Net::UPnP::Service::postcontrol() to postaction(). The postcontrol() will be deprecated.
        * Added Net::UPnP::Service::postquery().
        * Added Net::UPnP::GW::Gateway to control IGD, Internet Gateway devices, such as broad band routers.
        * Added two example, upnpgwdump.pl and upnpgwtool, for Net::UPnP::GW.
        * Changed upnpavdump.pl to specify the target media server.
        * Fixed ActionResponse::getargumentlist() to remove extra attributes of the tag name.

2006-01-17 Satoshi Konno <skonno@cybergarage.org>
        * v1.1.3